# saritasa-python-boilerplate-open-source

./: .gitignore  .pre-commit-config.yaml  .yamllint  README.md  copier.yaml  pyproject.toml  tasks.py
.github/: actions_issue_template.md  dependabot.yaml  renovate.json5
.github/actions/publish/: action.yaml
.github/actions/publish_docs/: action.yaml
.github/actions/report_action_failure/: action.yaml
.github/actions/run_pre_commit/: action.yaml
.github/actions/setup_python/: action.yaml
.github/actions/sync_boilerplate/: action.yaml
.github/workflows/: run_pre_commit.yaml
invocations/: __init__.py  ci.py  test.py
template/: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  tasks.py  {{_copier_conf.answers_file}}
template/.github/: actions_issue_template.md  dependabot.yaml  renovate.json5
template/.github/workflows/: publish.yaml  publish_docs.yaml  run_pre_commit.yaml  sync_boilerplate.yaml
